--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,7 @@
 @import url(./../blocks/element/__block/elemant__block.css);
 @import url(./../blocks/element/__text/element__text.css);
 @import url(./../blocks/element/__button/element__button.css);
+@import url(./../blocks/element/__button/_active/element__button_actve.css);
 
 
 @import url(./../blocks/footer/footer.css);
