--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -5,6 +5,7 @@
     background-color: #FFFFFF;
     border: none;
     transition: color 0.1s linear;
+    cursor: pointer;
 }
 
 .element__button:hover {
