--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,9 @@
 .header {
-    padding-top: 50px;
+    padding-top: 45px;
+    padding-bottom: 37px;
     margin: 0 auto 0;
     max-width: 880px;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 917px) {
@@ -13,5 +15,6 @@
 @media screen and (max-width: 767px) {
     .header {
         padding-top: 28px;
+        padding-bottom: 27.7px;
     }
 }
