--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -5,9 +5,10 @@
     background-image: url(./../../../images/close.svg);
     background-color: transparent;
     border: none;
-    left: calc(50% + 224px);
-    top: calc(50% - 212px);
+    left: calc(50% + 223px);
+    top: calc(50% - 206px);
     transition: opacity 0.1s linear;
+    cursor: pointer;
 }
 
 .popup__close:hover {
@@ -19,7 +20,7 @@
         width: 20px;
         height: 20px;
         background-size: contain;
-        left: calc(50% + 122px);
-        top: calc(50% - 200px);
+        left: calc(50% + 121px);
+        top: calc(50% - 197px);
     }
 }
