--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,5 +1,5 @@
 .profile__edit {
-    margin-left: 16px;
+    margin-left: 19px;
     padding: 0;
     border: 1px solid #FFFFFF;
     width: 24px;
@@ -9,6 +9,8 @@
     background-position: 50% 50%;
     background-repeat: no-repeat;
     transition: opacity 0.1s linear;
+    vertical-align: 10px;
+    cursor: pointer;
 }
 
 .profile__edit:hover {
