--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -6,6 +6,7 @@
 
 @media screen and (max-width: 767px) {
     .profile__info {
-        margin-top: 22.25px;
+        margin-top: 23px;
+        margin-left: 27px;
     }
 }
