--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,19 +1,23 @@
 .profile__job {
     margin: 0;
-    padding: 8px 0 0;
+    padding: 5px 0 0;
     
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     letter-spacing: 0px;
-    overflow-wrap: anywhere;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 360px;
 }
 
 @media screen and (max-width: 767px) {
     .profile__job {
-        padding-top: 14px;
+        padding-top: 3px;
         font-size: 14px;
         line-height: 17px;
-        text-align: center;
+        margin-left: 16px;
+        max-width: 220px;
     }
 }
