--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,11 @@
 @import url(./../vendor/normalize.css);
-@import url(./../vendor/fonts/itner.css);
+@import url(./../vendor/fonts.css);
 
+@import url(./../blocks/body/body.css);
 @import url(./../blocks/page/page.css);
 
 @import url(./../blocks/header/header.css);
 @import url(./../blocks/header/__logo/header__logo.css);
-@import url(./../blocks/header/__line/header_line.css);
 
 @import url(./../blocks/profile/profile.css);
 @import url(./../blocks/profile/__avatar/profile__avatar.css);
@@ -34,10 +34,10 @@
 
 @import url(./../blocks/popup/popup.css);
 @import url(./../blocks/popup/_opened/popup_opened.css);
-@import url(./../blocks/popup/__close/popup__close.css);
 @import url(./../blocks/popup/__container/popup__container.css);
+@import url(./../blocks/popup/__close/popup__close.css);
+@import url(./../blocks/popup/__form/popup__form.css);
 @import url(./../blocks/popup/__title/popup__title.css);
-@import url(./../blocks/popup/__edit-name/popup__edit-name.css);
-@import url(./../blocks/popup/__edit-job/popup__edit-job.css);
+@import url(./../blocks/popup/__input/popup__input.css);
 @import url(./../blocks/popup/__save/popup__save.css);
 
