--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -7,3 +7,7 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 8px;
 }
+
+.popup__input::placeholder {
+    color: #C4C4C4;
+}
