--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,4 +1,4 @@
-.popup__save {
+.popup__submit {
     margin-top: 49px;
     background: #000000;
     color:#ffffff;
@@ -14,12 +14,12 @@
     cursor: pointer;
 }
 
-.popup__save:hover {
+.popup__submit:hover {
     opacity: 0.8;
 }
 
 @media screen and (max-width: 619px) {
-    .popup__save {
+    .popup__submit {
         margin-top: 45px;
         font-size: 14px;
         line-height: 17px;
