--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,9 +4,15 @@
     top:0;
     width: 100%;
     height: 100%;
+
+    display: flex;
     
-    display: none;
+    visibility: hidden;
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
+
+    opacity: 0;
+
+    transition: opacity 0.3s, visibility 0.3s;
 }
