--- a/pages/index.css
+++ b/pages/index.css
@@ -35,6 +35,7 @@
 
 @import url(./../blocks/popup/popup.css);
 @import url(./../blocks/popup/_opened/popup_opened.css);
+@import url(./../blocks/popup/_initialized/popup_initialized.css);
 @import url(./../blocks/popup/__container/popup__container.css);
 @import url(./../blocks/popup/__container/_invisible/popup__container_invisible.css);
 @import url(./../blocks/popup/__close/popup__close.css);
@@ -42,7 +43,6 @@
 @import url(./../blocks/popup/__title/popup__title.css);
 @import url(./../blocks/popup/__input/popup__input.css);
 @import url(./../blocks/popup/__submit/popup__submit.css);
-
 @import url(./../blocks/popup/__image-preview/popup__image-preview.css);
 @import url(./../blocks/popup/__image/popup__image.css);
 @import url(./../blocks/popup/__image-title/popup__image-title.css);
