--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,11 +1,12 @@
 .popup__form {
     display: flex;
     flex-direction: column;
-    margin-top: 18px;
+    margin-top: 36px;
+    max-width: min-content;
 }
 
 @media screen and (max-width: 619px) {
     .popup__form {
-        margin-top: 45px;
+        margin-top: 63px;
     }
 }
