--- a/pages/index.css
+++ b/pages/index.css
@@ -43,6 +43,10 @@
 @import url(./../blocks/popup/__title/popup__title.css);
 @import url(./../blocks/popup/__input/popup__input.css);
 @import url(./../blocks/popup/__submit/popup__submit.css);
+@import url(./../blocks/popup/__submit/_disabled/popup__submit_disabled.css);
 @import url(./../blocks/popup/__image-preview/popup__image-preview.css);
 @import url(./../blocks/popup/__image/popup__image.css);
 @import url(./../blocks/popup/__image-title/popup__image-title.css);
+@import url(./../blocks/popup/__input/_type_error/popup__input_type_error.css);
+@import url(./../blocks/popup/__error/popup__error.css);
+@import url(./../blocks/popup/__error/_visible/popup__error_visible.css);
