--- a/src/blocks/element/__delete/element__delete.css
+++ b/src/blocks/element/__delete/element__delete.css
@@ -1,5 +1,6 @@
 .element__delete {
     position: absolute;
+    visibility: hidden;
     background-image: url('./../../../images/trash.svg');
     width: 18px;
     height: 18px;
